fixed project ordering on mobile

--- a/src/components/experience/Experience.css
+++ b/src/components/experience/Experience.css
@@ -21,9 +21,3 @@
 
 .job-details{
 }
-
-.project-title{
-    font-size: 1.65rem;
-    text-decoration: underline;
-    color: white;
-}
